test-policies-pass/validating/delete-protection/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: delete-protection-binding
spec:
  policyName: delete-protection
  validationActions: [Deny]
